Fix teammate name

--- a/assignment/metadata.yaml
+++ b/assignment/metadata.yaml
@@ -2,7 +2,7 @@ toc: true
 toc-depth: 2
 author:
 - Pranaov S (24011103051)
-- Kabinthra S S (24011103052)
+- Kavinthra S S (24011103052)
 title: "Shared expenses app (name not finalized)
  CS2801T: Database Management Systems Lab Project"
 numbersections: true
